--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <artifactId>javafx-controls</artifactId>
             <version>23.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.24.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
